--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             };
 
             // Initialize Firebase
-            const app = initializeApp(firebaseConfig);
+            const firebase = initializeApp(firebaseConfig);
             const analytics = getAnalytics(app);
         </script>
         <script src="index.js"></script>
