--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,7 @@
             <button onclick="logout()">Logout</button>
         </div>
 
-
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
 
     </body>
 </html>
